--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,7 @@ h2{
 }
 
 h1{
-    font-family: roboto-condensed;
+    font-family: roboto-boldcondensed;
 }
 
 h3{
@@ -282,8 +282,8 @@ span{
 .HomeNavbarText{
     text-transform: uppercase;
     color: #1E3C6E;
-    font-weight: 800;
-    font-family: roboto-condensed;
+    font-weight: bold;
+    font-family: roboto-boldcondensed;
     padding-right: 7px;
     padding-left: 7px;
     margin: 0;
@@ -336,8 +336,8 @@ span{
     line-height: 1.3;
     padding-top: 10%;
     margin-left: 100px;
-    font-family: roboto-condensed;
-    font-weight: 900;
+    font-family: roboto-boldcondensed;
+    font-weight: bold;
     text-shadow: 2px 2px 8px #333333;
 }
 
@@ -422,7 +422,7 @@ span{
 .ContentImageBox{
     padding-left: 10%;
     padding-right: 10%;
-    padding-top: 100px;
+    padding-top: 60px;
 }
 
 .ContentImage{
@@ -431,8 +431,9 @@ span{
 }
 
 .Footer{
-    margin-top: -100px;
+    margin-top: -65px;
     background-color: #0d3a70;
+    border-top: 8px solid #1f7dae;
 }
 
 .FooterMarks{
@@ -440,7 +441,7 @@ span{
 }
 
 .FooterMark{
-    padding-top: 100px;
+    padding-top: 50px;
     padding-left: 22%;
     padding-right: 22%;
     width: 100%;
@@ -462,7 +463,22 @@ span{
 
 .FooterIcons{
     text-align: center;
-    margin-top: 80px;
+    margin-top: 70px;
+}
+.large-footer-icon {
+    width: 30%;
+}
+
+.small-footer-icon {
+    width: 20%;
+}
+
+.HomeConnect {
+    width: 45%;
+}
+
+.HomeConnectPadding {
+    width: 27.5%;
 }
 
 .FooterIcon1{
@@ -478,8 +494,9 @@ span{
 }
 
 .FooterText1{
-    padding-top: 40px;
+    padding-top: 60px;
     font-size: 18px;
+    font-family: roboto-light;
     color: white;
     text-align: center;
 }
@@ -489,7 +506,7 @@ span{
     color: #0584C7;
     text-align: center;
     font-weight: 500;
-    padding-bottom: 70px;
+    padding-bottom: 50px;
 }
 
 
